wip(backend): work on project service
